"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-02-11	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-79-chpsim-03-02:
	  Finished implementing channel probes through CHP and chpsim.  
	  Added 3 sets of test cases in test/chpsim with probes.
	  Value-probes probably won't happen on this branch, needs specs.


	* HACKT-00-01-04-main-00-80-79-chpsim-03-01:
	  Third epoch of chpsim features.
	  Proposals: add probe semantics (affects language front-middle ends)
		add CHP assert statements, add CHP wait statements, 
		chpsim: watch-*, break-*.
		May not get around to all of them this round...
	  This revision: added probe statements to parser and AST, 
		Object and CHP lang classes not done yet, coming up.  
		After grammar update, a few compile-fail expect dumps updated.
	  Added some exception classes for expressions, not yet used.  


2007-02-08	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-79:
	  Latent mis-packaging: EXTRA_DIST += parser/yacc-output-to-C.awk


2007-02-08	Nathan Smith	<nrs27@cornell.edu>			

	* HACKT-00-01-04-main-00-80-78:
	  Added chpsim simulation class command advance-to
		Will advance simulation time until all events up to <time> 
		are simulated, current_time is set to time of last executed event.


2007-02-08	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-77:
	  Don't use libc's tmpnam anymore, not using mkstemp either, 
		not using /tmp/ as temp file location, dodging inconvenience
		and necessary configury required.  Would rather use external 
		library (*ahem* boost), and wrap around file descriptor.
		Just append a suffix to call it a temp file.


	* HACKT-00-01-04-main-00-80-76:
	  Object/inst/instance_collection.cc:
		Added missing definition of instance_placeholder_base::null, 