@@ -11,7 +11,7 @@
 
 	NOTE: ancient versions of yacc reject // end-of-line comments
 
-	$Id: hackt-parse.yy.in,v 1.23.2.1 2007/02/12 02:26:53 fang Exp $
+	$Id: hackt-parse.yy.in,v 1.23.2.2 2007/02/12 21:39:46 fang Exp $
 	This file was formerly known as:
 	Id: hackt-parse.yy,v 1.2 2005/11/10 02:13:09 fang Exp
 	Id: art++-parse.yy,v 1.25 2005/07/20 21:00:59 fang Exp
@@ -353,6 +353,8 @@ extern const char* const yyrule[];
 	CHP::receive*		_chp_receive;
 	CHP::binary_assignment*	_chp_binary_assignment;
 	CHP::bool_assignment*	_chp_bool_assignment;
+	CHP::stmt_attr_list*	_chp_stmt_attr_list;
+	CHP::stmt_attribute*	_chp_stmt_attr;
 
 	HSE::body*		_hse_body;
 	HSE::statement*		_hse_stmt;
@@ -466,6 +468,7 @@ yyfreestacks(const short* yyss, const short* yyssp,
 %type	<_node_position>	'+' '-' '*' '/' '%'
 %type	<_node_position>	'~' '&' '|' '^'
 %type	<_node_position>	'!' '?'
+%type	<_node_position>	'$'
 
 /*
 	the following tokens are defined below because they consist of
@@ -602,6 +605,10 @@ yyfreestacks(const short* yyss, const short* yyssp,
 %type	<_chp_stmt_list>	chp_concurrent_group
 %type	<_chp_stmt_list>	chp_sequence_group
 %type	<_chp_stmt>	full_chp_body_item chp_body_item
+%type	<_chp_stmt>	chp_statement
+%type	<_chp_stmt_attr_list>	chp_statement_attributes
+%type	<_chp_stmt_attr_list>	chp_statement_attr_list
+%type	<_chp_stmt_attr>	chp_statement_attr
 %type	<_chp_stmt>	chp_concurrent_item
 %type	<_chp_stmt>	chp_body_or_skip
 %type	<_chp_loop>	chp_loop
@@ -1492,6 +1499,35 @@ full_chp_body_item
 	;
 
 chp_body_item
+	: chp_statement_attributes chp_statement
+		{ $$ = $2; $$->prepend_attributes($1); }
+	| chp_statement { $$ = $1; }
+	;
+
+/* attributes are optionally prefixed to statements */
+chp_statement_attributes
+	: '$' '(' chp_statement_attr_list ')'
+		{ DELETE_TOKEN($2); WRAP_LIST($1, $3, $4); $$ = $3; }
+	;
+
+/* we use ';' to delimit, just in case we want expr_list in future */
+chp_statement_attr_list
+	: chp_statement_attr_list ';' chp_statement_attr
+		{ $$ = $1; APPEND_LIST($1, $2, $3); }
+	| chp_statement_attr
+		{ $$ = new CHP::stmt_attr_list($1); }
+	;
+
+/* key-value pairs */
+/* e.g.: after=10, assert=expr */
+chp_statement_attr
+	: ID '=' expr
+		{ DELETE_TOKEN($2); $$ = new CHP::stmt_attribute($1, $3); }
+/*	: ID '=' expr_list	*/
+/* possibly introduce shorthand for some common ones? assert, delay? */
+	;
+
+chp_statement
 	: chp_loop { $$ = $1; }
 	| chp_do_until { $$ = $1; }
 	| chp_selection { $$ = $1; }
@@ -1500,6 +1536,7 @@ chp_body_item
 	| chp_bool_assignment { $$ = $1; }
 	| chp_send { $$ = $1; }
 	| chp_recv { $$ = $1; }
+	/* log() is likely to be deprecated */
 	| LOG expr_list_in_parens
 		{ $$ = new CHP::log($1, $2); }
 	| chp_metaloop_selection { $$ = $1; }
